# QueryGPT

./: .env  .env.example  .gitignore  README.md  README_zh.md  dependencies.py  main.py  pyproject.toml  requirements.txt
agents/: base.py  conv_prompt.py  csv_agent.py  dataStore.py  excel_agent.py  execl_agent.py  function_query_agent.py  matplotlib.py  output_parser.py  plot_prompt.py  query_prompt.py
chains/: openAI.py  queryCSV.py
client/: components.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.vue  main.ts
client/src/api/: chat.ts
client/src/components/common/UpFiles/: index.vue
client/src/components/common/UserAvatar/: index.vue
client/src/components/common/charts/: KLineChart.vue
client/src/locales/: zh-CN.ts
client/src/store/modules/chat/: helper.ts  index.ts
client/src/store/modules/user/: helper.ts
client/src/typings/: chat.d.ts
client/src/views/chat/: index.vue
client/src/views/chat/components/Message/: Avatar.vue  Text.vue  index.vue
client/src/views/chat/layout/: Layout.vue
client/src/views/chat/layout/sider/: Footer.vue  (+2 more)
data/: data.csv  data1.csv
models/: api.py
prompts/: chat.py
routers/: chat.py
server/: .env.example  main.py
server/agents/: conv_prompt.py  dataStore.py
server/data/: data.csv
server/models/: api.py
server/tools/: double_query_check.py  function_query_tool.py  loader.py  plot_tool.py
textsplitter/: __init__.py
tools/: chart_type_prompt.py  double_query_check.py  file.py  function_query_tool.py  plot_tool.py  response_parser.py
vectorstores/: faiss.py
(+3 files in other folders)
