[tool.poetry]
name = "QueryGPT"
version = "0.1.0"
description = "QueryGPT API"
authors = ["Robert"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.179"
fastapi = {extras = ["all"], version = "^0.95.2"}
pandas = {extras = ["all"], version = "^2.0.1"}
openai = "^0.27.7"
openpyxl = "^3.1.2"
matplotlib = "^3.7.1"
tiktoken = {extras = ["all"], version = "^0.4.0"}
faiss-cpu = {extras = ["all"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
